prevent overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+html {
+  overflow-x: hidden;
+}
 /* Header */
 /* Extra Small Screen - Two Line Title */
 @media screen and (max-width: 374px) {
